@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.3.0
 
+	- Fixed Compiling with mingw-w64 (STR #2308).
 	- Fixed crashes when detecting illegal utf 8 sequences
 	  in Fl_Text_* widgets (STR #2348)
 	- Fixed Fl_Text_Display Tabulator calculations (STR #2450)
